Closed
Bug 1951085
Opened 17 days ago
Closed 11 days ago
Firefox crashes on Agent timeout when TimeoutResult is set to 1
Categories
(Firefox :: Data Loss Prevention, defect)
Tracking
()
VERIFIED
FIXED
138 Branch
Tracking | Status | |
---|---|---|
firefox-esr115 | --- | unaffected |
firefox-esr128 | --- | unaffected |
firefox135 | --- | unaffected |
firefox136 | --- | unaffected |
firefox137 | --- | disabled |
firefox138 | --- | verified |
People
(Reporter: atrif, Assigned: handyman)
References
(Blocks 2 open bugs)
Details
(Keywords: regression, Whiteboard: [fidefe-quality-foundation?])
Crash Data
Attachments
(2 files)
Found in
- 137.0a1 (20250227215252)
Affected versions
- 137.0a1 (20250227215252)
Tested platforms
- Affected platforms: Windows 10x64,
- Unaffected platforms: Ubuntu 24, macOS
Preconditions
- Download the DLP test assets from https://drive.google.com/file/d/1yjqVRuxdKV3WnO7D2wzMgDXBuYBxUgVw/view
- Create a distribution folder inside the Firefox folder and paste the policies-4.json to it and then rename it to policies.json
- set "TimeoutResult": 1 in policies.json file
- DLP Agent is running:
.\content_analysis_sdk_agent.exe --user --toblock=.*\d{3}-?\d{2}-?\d{4}.* --towarn=.*warn.* --delays=10
Steps to reproduce
- Open Firefox and perform clipboard paste.
Expected result
- No crash.
Actual result
- Firefox crashes.
Regression range
- pushlog: https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=a7b709e4e4fa320e15ae82f8a0b7b1a43dadd6d5&tochange=d0efb392c1783f46f27a946f48e3ef729ecd3675 . I don’t know if bug 1950256 or bug 1919703 is the regressor. I will ni? David.
Additional notes
- Attached a screen recording.
- Marking this as high-impact ([fidefe-quality-foundation?]) since this is a recent regression and a crash.
Flags: needinfo?(davidparks)
Updated•17 days ago
|
Reporter | ||
Updated•14 days ago
|
Assignee | ||
Updated•14 days ago
|
Flags: needinfo?(davidparks)
Reporter | ||
Updated•12 days ago
|
Assignee | ||
Updated•12 days ago
|
Assignee: nobody → davidp99
Severity: -- → S2
Assignee | ||
Comment 1•12 days ago
|
||
In bug 1949834, D239670 "Make timeouts work with warn" introduced a logic
error that broke timeouts with default-warn. This restores the old logic.
Pushed by daparks@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/b0532df9ba4a
Make timeouts work with default-warn r=dlp-reviewers,gstoll
Comment 3•11 days ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 11 days ago
Resolution: --- → FIXED
Target Milestone: --- → 138 Branch
Reporter | ||
Comment 4•11 days ago
|
||
Verified fixed with Firefox 138.0a1 (2025-03-06) on Windows 10x64 and Windows 11. Firefox no longer crashes after following steps from comment 0.
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•