Bug 1951085: Make timeouts work with default-warn r=dlp-reviewers,gstoll

In bug 1949834, D239670 "Make timeouts work with warn" introduced a logic
error that broke timeouts with default-warn.  This restores the old logic.

Differential Revision: https://phabricator.services.mozilla.com/D240551